[package]
name = "ebook-tts"
version = "0.1.0"
authors = ["utterstep"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
async-scoped = { version = "0.6", features = ["use-tokio"] }
base64 = "0.13.0"
bincode = "1.3"
crossbeam = "0.8"
dotenv = "0.15"
env_logger = "0.8"
goauth = "0.10"
indicatif = "0.16"
log = "0.4"
reqwest = { version = "0.11", features = ["json", "brotli"] }
scraper = "0.12"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
smpl_jwt = "0.6"
tempfile = "3.2"
time = "0.2"
tokio = { version = "1.5", features = ["full"] }
